--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     background-size: contain;
     align-items: center;
     text-align: center;
+    background-color: aqua;
 }
 
 .container {
